miniconf/tests/ui/enum-non-newtype.stderr
error: Only newtype (single field tuple) enum variants are supported.
 --> tests/ui/enum-non-newtype.rs:5:5
  |
5 |     A(i32, i32),
  |     ^
