miniconf/tests/ui/enum-non-newtype.rs
use miniconf::Tree;

#[derive(Tree)]
pub enum E1 {
    A(i32, i32),
}

fn main() {}
